# fastapi-htmx-demo

./: Makefile  README.md  pyproject.toml
src/: main.py
src/templates/: base.html  index.html
