[tool.poetry]
name = "fastapi-htmx-demo"
version = "0.1.0"
description = ""
authors = ["Justin Lam <justinmklam@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_htmx_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
Jinja2 = "^3.1.2"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
